// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should match standard snapshot 1`] = `
<scale-checkbox-group class="checkbox-group">
  <!---->
  <div hidden="" slot="checkbox-header">
    <scale-checkbox class="testing" helper-text="helperText" input-id="header-checkbox" label="checkbox" name="nameOfCheckbox" value="1"></scale-checkbox>
  </div>
  <div hidden="" slot="checkbox-list">
    <div style="margin-top: 0.5rem;">
      <scale-checkbox checked="" label="checkbox" name="nameOfCheckbox" value="2"></scale-checkbox>
    </div>
    <div style="margin-top: 0.5rem;">
      <scale-checkbox checked="" name="nameOfCheckbox" value="3">
        Checkbox Slot
      </scale-checkbox>
    </div>
    <div style="margin-top: 0.5rem;">
      <scale-checkbox disabled="" label="checkbox" name="nameOfCheckbox" value="3"></scale-checkbox>
    </div>
  </div>
  <scale-checkbox arialabelcheckbox=" - Unselect all" checked="" disabled="" label="" part="parent-checkbox" status="" value=""></scale-checkbox>
  <fieldset part="fieldset">
    <legend></legend>
  </fieldset>
</scale-checkbox-group>
`;

exports[`CheckboxGroup should match standard snapshot 2`] = `
<scale-checkbox-group class="checkbox-group">
  <!---->
  <div hidden="" slot="checkbox-header">
    <scale-checkbox class="testing" helper-text="helperText" input-id="header-checkbox" label="checkbox" name="nameOfCheckbox" value="1"></scale-checkbox>
  </div>
  <div hidden="" slot="checkbox-list">
    <div style="margin-top: 0.5rem;">
      <scale-checkbox checked="" label="checkbox" name="nameOfCheckbox" value="2"></scale-checkbox>
    </div>
    <div style="margin-top: 0.5rem;">
      <scale-checkbox checked="" name="nameOfCheckbox" value="3">
        Checkbox Slot
      </scale-checkbox>
    </div>
    <div style="margin-top: 0.5rem;">
      <scale-checkbox disabled="" label="checkbox" name="nameOfCheckbox" value="3"></scale-checkbox>
    </div>
  </div>
  <scale-checkbox arialabelcheckbox=" - Unselect all" checked="" disabled="" label="" part="parent-checkbox" status="" value=""></scale-checkbox>
  <fieldset part="fieldset">
    <legend></legend>
  </fieldset>
</scale-checkbox-group>
`;

exports[`CheckboxGroup should select all on master click 1`] = `
<scale-checkbox-group class="checkbox-group">
  <!---->
  <div hidden="" slot="checkbox-header">
    <scale-checkbox class="testing" helper-text="helperText" input-id="header-checkbox" label="checkbox" name="nameOfCheckbox" value="1"></scale-checkbox>
  </div>
  <div hidden="" slot="checkbox-list">
    <div style="margin-top: 0.5rem;">
      <scale-checkbox checked="" label="checkbox" name="nameOfCheckbox" value="2"></scale-checkbox>
    </div>
    <div style="margin-top: 0.5rem;">
      <scale-checkbox checked="" name="nameOfCheckbox" value="3">
        Checkbox Slot
      </scale-checkbox>
    </div>
    <div style="margin-top: 0.5rem;">
      <scale-checkbox disabled="" label="checkbox" name="nameOfCheckbox" value="4"></scale-checkbox>
    </div>
    <div style="margin-top: 0.5rem;">
      <scale-checkbox label="checkbox" name="nameOfCheckbox" value="5"></scale-checkbox>
    </div>
  </div>
  <scale-checkbox arialabelcheckbox=" - Unselect all" checked="" disabled="" label="" part="parent-checkbox" status="" value=""></scale-checkbox>
  <fieldset part="fieldset">
    <legend></legend>
  </fieldset>
</scale-checkbox-group>
`;

exports[`CheckboxGroup should select all on master click 2`] = `
<scale-checkbox-group class="checkbox-group">
  <!---->
  <div hidden="" slot="checkbox-header">
    <scale-checkbox class="testing" helper-text="helperText" input-id="header-checkbox" label="checkbox" name="nameOfCheckbox" value="1"></scale-checkbox>
  </div>
  <div hidden="" slot="checkbox-list">
    <div style="margin-top: 0.5rem;">
      <scale-checkbox checked="" label="checkbox" name="nameOfCheckbox" value="2"></scale-checkbox>
    </div>
    <div style="margin-top: 0.5rem;">
      <scale-checkbox checked="" name="nameOfCheckbox" value="3">
        Checkbox Slot
      </scale-checkbox>
    </div>
    <div style="margin-top: 0.5rem;">
      <scale-checkbox disabled="" label="checkbox" name="nameOfCheckbox" value="4"></scale-checkbox>
    </div>
    <div style="margin-top: 0.5rem;">
      <scale-checkbox label="checkbox" name="nameOfCheckbox" value="5"></scale-checkbox>
    </div>
  </div>
  <scale-checkbox arialabelcheckbox=" - Unselect all" checked="" disabled="" label="" part="parent-checkbox" status="" value=""></scale-checkbox>
  <fieldset part="fieldset">
    <legend></legend>
  </fieldset>
</scale-checkbox-group>
`;
